# agentos-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md
config/: server.toml
scripts/: launch.sh
scripts/observability/: newrelic_event.sh  sentry_release.sh
src/: config.rs  http.rs  install.rs  main.rs  orchestrator.rs  rag.rs  repo.rs  router.rs  schema.rs  server.rs  session.rs
src/tools/: mod.rs  ollama.rs  qdrant.rs
