[package]
name = "saaq-discovery"
version = "0.1.0"
edition = "2024"
description = "Local MCP server for authoritative corinth-canal context and bounded repo analysis"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
regex = "1.12"
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"

[workspace]
